--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "mint-ui": "^2.2.13",
     "strophe.js": "^1.3.4",
     "underscore": "^1.9.1",
+    "v-viewer": "^1.4.2",
     "vant": "^2.1.2",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.0.3",
     "vue-wechat-title": "^2.0.5"
   },
