--- a/package.json
+++ b/package.json
@@ -9,43 +9,46 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "axios": "^0.19.0",
-    "benz-amr-recorder": "^1.0.14",
-    "core-js": "^2.6.5",
-    "crypto-js": "^3.1.9-1",
-    "easemob-websdk": "^1.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "axios": "^0.19.2",
+    "benz-amr-recorder": "^1.1.2",
+    "core-js": "^2.6.11",
+    "crypto-js": "^3.3.0",
+    "easemob-websdk": "^1.11.1",
     "es6-promise": "^4.2.8",
+    "hx-websdk": "^1.6.1",
     "mint-ui": "^2.2.13",
     "strophe.js": "^1.3.4",
-    "underscore": "^1.9.1",
-    "v-viewer": "^1.4.2",
-    "vant": "^2.1.2",
-    "vue": "^2.6.10",
+    "underscore": "^1.10.2",
+    "v-viewer": "^1.5.1",
+    "vant": "^2.5.9",
+    "vue": "^2.6.11",
     "vue-cookie": "^1.1.4",
     "vue-infinite-scroll": "^2.0.2",
     "vue-photo-preview": "^1.1.3",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.6",
     "vue-wechat-title": "^2.0.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-plugin-unit-mocha": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-unit-mocha": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-import": "^1.12.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
+    "browserslist": "^4.11.1",
+    "caniuse-lite": "^1.0.30001039",
     "chai": "^4.1.2",
-    "compression-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "image-webpack-loader": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.4.1"
+    "image-webpack-loader": "^5.1.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.6.1"
   }
 }
